--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="project-info">
                     <h3>Portfolio Website</h3>
                     <p>HTML, CSS, JS</p>
-                    <a href="https://rameshkannan-dev.github.io/RAMESH-PORTFOLIO/" target="_blank">View Project</a>
+                    <a href="https://suman2k3.github.io/Suman_Portfolio/" target="_blank">View Project</a>
                 </div>
             </div>
 
